# card-fraud-rule-engine-monitoring

./: .gitignore  .project  AGENTS.md  CLAUDE.md  Dockerfile  README.md  __init__.py  _runner.py  auth-response.json  auth0_verify.py  codemap.md  compiled-ruleset-v1.json  compose-auth-async-on.override.yml  compose-auth-no-async.override.yml  conftest.py  doppler_local.py  e2e_local.ps1  error-response.json  evaluate-request.json  load_auth_ruleset.py  locustfile-auth-only.py  locustfile.py  monitoring-response.json  openapi.yaml  performance-optimization.md  pom.xml  pyproject.toml  redis_local.py  requirements.txt  run-load-test.sh  setup-test-data.ps1  setup-test-data.sh  setup_auth0.py  setup_local.ps1  setup_local.sh  test_health.py  test_latency.py  test_monitoring.py  test_rulesets.py  test_runner.py  (+4 more)
01-setup/: README.md
02-development/: architecture.md  inline-simulation-design.md  kafka-optimization.md  performance-tuning.md  redis-lua-optimization.md  rule-engine-monitoring-split-plan.md
03-api/: README.md  field-registry-contract.md  rule-management-requirements.md
04-testing/: README.md  auth-only-slo-and-async-durability.md  e2e-testing.md  how-to-run-auth-only-load-test.md  infrastructure-capacity-audit.md  jar-based-load-testing.md  jfr-profiling-guide.md  jsoniter-java17-incompatibility.md  load-testing-baseline.md  load-testing-notes-local.md  next-optimization-strategies.md  openshift-load-testing.md  performance-findings-summary.md  powershell-load-testing-runbook.md
05-deployment/: native-image-guide.md
06-operations/: README.md  artifact-retention-policy.md  checksum-mismatch.md  disaster-recovery.md  multi-region-strategy.md  redis-outage.md  redis-velocity-and-replay.md
07-reference/: 0001-runtime-reads-manifest-directly.md  0003-http-200-inband-fail-open.md  (+13 more)
(+182 files in other folders)
